[package]
name = "solana-pumpfun-token"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust program that creates and manipulates tokens on the Solana blockchain using the pump.fun platform"

[dependencies]
solana-sdk = "2.0.25"
solana-client = "2.0.25"
solana-program = "2.0.25"
solana-transaction-status = "2.0.25"
solana-account-decoder = "2.0.25"
solana-rpc-client-api = "2.0.25"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"
mpl-token-metadata = "4.1.2"
anchor-lang = { version = "0.31.0", features = ["derive", "idl-build"] }
anchor-client = "0.31.0"
borsh = { version = "0.10.3", features = ["std"] }
reqwest = { version = "0.11", features = ["json", "multipart"] } # Removed "blocking" for async Raydium calls
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15.0"
clap = { version = "4.3", features = ["derive", "env"] }
base64 = "0.21"
bs58 = "0.5.0"
chrono = { version = "0.4", features = ["serde"] } # Added serde feature
rand = "0.8"
url = "2.4.0"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
egui_plot = "0.28.0"
env_logger = "0.10"
prettytable-rs = "0.10"
console = "0.15" # For colored output
crossterm = "0.27" # Added from pumper
indicatif = "0.17" # For progress bars
num-bigint = "0.4" # Added for large integer math
num-traits = "0.2" # Added for BigUint conversions
ed25519-dalek = "1.0"
sha2 = "0.10"
bytemuck = "1.13"
lazy_static = "1.4"
rayon = "1.7" # For parallel processing
pin-project = "1.1"
form_urlencoded = "1.2"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
uuid = { version = "1.4", features = ["v4"] }
bincode = "1.3.3"
dirs = "5.0.1"
hex = "0.4"
solana-address-lookup-table-program = "2.0.25"

# GUI Dependencies
eframe = { version = "0.28.1", default_features = false, features = ["default_fonts", "persistence", "glow"] } # Use default_fonts for emoji support
dotenvy = "0.15.7"
rfd = "0.14" # Added for file dialogs
egui_extras = { version = "0.28.0", features = ["all_loaders"] } # Changed to all_loaders for robust SVG support

# jito-searcher-client = "0.0.1" # Removed Jito client dependency
# jito-searcher-client = { git = ... } # Removed Git dependency

# Jito dependencies based on protos and gRPC
# tonic = { version = "0.11", features = ["tls", "tls-roots", "transport"] }
# prost = "0.12"
# prost-types = "0.12"
# http = "1.0"
# jito-searcher-protos = "0.1.0" # Removed
# jito-protos = "0.1.0" # Removed

# Explicitly define the main binary using src/main.rs
[[bin]]
name = "solana-pumpfun-token-cli" # Renamed original binary
path = "src/main.rs"

[[bin]]
name = "solana-pumpfun-token-gui" # Added new binary for GUI
path = "src/gui_main.rs" # Specify the entry point for the GUI

[[bin]]
name = "test_api_exact"
path = "test_api_exact.rs"

[[bin]]
name = "check_token"
path = "check_token.rs"

[[bin]]
name = "test_auto_pool"
path = "test_auto_pool.rs"

# Remove tonic-build if no longer needed
# [build-dependencies]
# tonic-build = "0.11"

[[bin]]
name = "license-keygen"
path = "simple-key-gen.rs"
